--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url(//db.onlinewebfonts.com/c/01173b246d9d9ea808ea75a26b3b61bb?family=Circular+Spotify+Tx+T+Black);
+:root{
+  --blue: #1D75DE;
+  --greenx: #1ED760;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base{
+  body{
+    @apply font-bold
+  }
+
+  li{
+    @apply hover:text-[#1ED760] cursor-pointer;
+  }
+
+  .footerLi{
+    @apply lg:text-sm py-2 font-light ;
+  }
+
+  h5{
+    @apply text-xs text-[#efefef81] lg:font-bold uppercase py-5 pt-16 font-semibold md:pt-4
+  }
+
+  button{
+    @apply hover:scale-105
+  }
 }
